--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,21 +1,8 @@
 spring:
   application:
     name: poultry-management
-
-  datasource:
-    url: jdbc:postgresql://localhost:5432/poultry_db
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-
+  profiles:
+    active: desktop
 server:
   error:
     include-message: always
