--- a/backend/src/main/resources/application-desktop.yaml
+++ b/backend/src/main/resources/application-desktop.yaml
@@ -8,4 +8,4 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-    show-sql: false
+    show-sql: true
