--- a/backend/src/main/resources/application-desktop.yaml
+++ b/backend/src/main/resources/application-desktop.yaml
@@ -1,4 +1,7 @@
 spring:
+  config:
+    activate:
+      on-profile: desktop
   datasource:
     url: jdbc:h2:file:${user.home}/poultry_manager_data/db;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
     driver-class-name: org.h2.Driver
